--- a/src/AddTransaction/AddTransaction.styles.css
+++ b/src/AddTransaction/AddTransaction.styles.css
@@ -1,61 +1,86 @@
+* CSS */
 .transaction-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #ffffff; 
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    margin: 0 auto;
-  }
-  
-  input[type="text"],
-  input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  input[type="radio"] {
-    margin: 5px;
-  }
-  
-  
-  
-  label {
-    font-size: 16px;
-  }
-  
-  button {
-    background-color: #0074e4; 
-    color: #fff; 
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #0052b7; 
-  }
-  @media (max-width: 768px) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+  max-width: 300px; /* Limit the maximum width for larger screens */
+  overflow-x: hidden;
+ 
+}
 
-    .transaction-form {
-      width: 90%; 
-    }
+input[type="text"],
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.radio-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+input[type="radio"] {
+  margin: 0 5px;
+}
+
+label {
+  font-size: 16px;
+}
+
+button {
+  background-color: #0074e4;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 20px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0052b7;
+}
+
+.red {
+  color: #ff5733;
+  font-weight: 600;
+}
+
+.green {
+  color: #22eb87;
+  font-weight: 600;
+}
+
+@media (max-width: 982px) {
+  .transaction-form {
+    width: 90%;
   }
-  
-  /* Media query for screens narrower than 480px */
-  @media (max-width: 480px) {
-    
-    
-    .transaction-form {
-      width: 100%; 
-      padding: 10px; 
-    }
+}
+@media (max-width: 768px) {
+  .transaction-form {
+    width: 90%;
   }
+}
+
+/* Media query for screens narrower than 480px */
+@media (max-width: 480px) {
+  .transaction-form {
+    width: 90%;
+    padding: 10px;
+    margin-right: 20px;
+  }
+}
