removed asset svg style

--- a/src/TransactionHistory/TransactionHistory.styles.css
+++ b/src/TransactionHistory/TransactionHistory.styles.css
@@ -10,7 +10,7 @@
   .transaction-history h2 {
     font-size: 20px;
     margin-bottom: 10px;
-    color: #0074e4; /* Blue text color */
+    color: #0074e4; 
   }
   
   
