--- a/src/AddTransaction/AddTransaction.styles.css
+++ b/src/AddTransaction/AddTransaction.styles.css
@@ -1,4 +1,4 @@
-* CSS */
+
 .transaction-form {
   display: flex;
   flex-direction: column;
@@ -8,7 +8,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
-  max-width: 300px; /* Limit the maximum width for larger screens */
+  max-width: 300px; 
   overflow-x: hidden;
  
 }
