--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #d4d2d2e5;
   overflow-x: hidden;
-  background-image: url('../src/assets/subtle-prism.svg'); 
-  background-repeat: no-repeat;
-  background-size:cover; 
   width: 100%;
-  /* background-position: center center;  */
-  
 }
 
 .App {
