--- a/src/BalanceSection/BalanceSection.styles.css
+++ b/src/BalanceSection/BalanceSection.styles.css
@@ -8,7 +8,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  max-width: 400px; /* Limit the maximum width for larger screens */
+  max-width: 400px; 
 }
 
 .balance h2 {
