--- a/src/IncomeandExpense/IncomeandExpense.styles.css
+++ b/src/IncomeandExpense/IncomeandExpense.styles.css
@@ -6,18 +6,18 @@
   align-items: center;
   width: 100%;
   overflow-x: hidden;
-  flex-wrap: wrap; /* Allow boxes to wrap to the next line on smaller screens */
+  flex-wrap: wrap; 
 }
 
 .box {
   background-color: #f2f2f2;
   border-radius: 10px;
   padding: 20px;
-  margin: 10px; /* Add some margin between the boxes */
+  margin: 10px; 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 250px; /* Adjust the minimum width as needed */
+  min-width: 250px; 
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
