--- a/src/AddTransaction/AddTransaction.styles.css
+++ b/src/AddTransaction/AddTransaction.styles.css
@@ -1,23 +1,22 @@
 
+/* Default styles */
 .transaction-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #ffffff;
-  padding: 20px;
+  padding: 20px 70px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
-  max-width: 300px; 
-  overflow-x: hidden;
- 
+  max-width: 700px;
 }
 
 input[type="text"],
 input[type="number"] {
   width: 100%;
   padding: 10px;
-  margin: 5px 0;
+  margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
@@ -65,22 +64,37 @@ button:hover {
   font-weight: 600;
 }
 
+/* Media query for screens narrower than 982px */
 @media (max-width: 982px) {
   .transaction-form {
-    width: 90%;
+    padding: 20px 30px;
   }
 }
-@media (max-width: 768px) {
+
+/* Media query for screens narrower than 768px */
+@media (max-width: 773px) {
   .transaction-form {
-    width: 90%;
+    padding: 20px 40px;
   }
+  
 }
 
 /* Media query for screens narrower than 480px */
 @media (max-width: 480px) {
   .transaction-form {
-    width: 90%;
-    padding: 10px;
-    margin-right: 20px;
+    padding:20px  40px;
+  }
+  input[type="text"],
+  input[type="number"] {
+    width: 100%;
+  }
+}
+@media (max-width: 390px) {
+  .transaction-form {
+    padding:20px 40px;
+  }
+  input[type="text"],
+  input[type="number"] {
+    width: 100%;
   }
 }
