--- a/src/AddTransaction/AddTransaction.styles.css
+++ b/src/AddTransaction/AddTransaction.styles.css
@@ -10,6 +10,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
   max-width: 700px;
+  margin-bottom: 20px;
 }
 
 input[type="text"],
